--- a/assets/src/scss/customize/clientdash-customize.scss
+++ b/assets/src/scss/customize/clientdash-customize.scss
@@ -1,6 +1,7 @@
 @import "settings";
 
 @import "../global/icons";
+@import "../global/animations";
 @import "base";
 @import "common";
 @import "dashicons-selector";
