--- a/assets/src/scss/customize/_common.scss
+++ b/assets/src/scss/customize/_common.scss
@@ -83,3 +83,74 @@
     text-shadow: 0 0 10px rgba(#000, 0.5);
   }
 }
+
+.cd-editor-tip {
+  position: absolute;
+  background: $primary-color;
+  color: #fff;
+  padding: 0.5em;
+  box-shadow: 2px 2px 10px rgba(#000,0.4);
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+
+  &:after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    width: 0;
+    height: 0;
+    border-style: solid;
+  }
+
+  &.cd-editor-tip-above {
+    bottom: calc(100% + 7px);
+    animation-name: bounce-down;
+
+    &:after {
+      top: 100%;
+      left: 50%;
+      margin-left: -7.5px;
+      border-width: 10px 7.5px 0 7.5px;
+      border-color: $primary-color transparent transparent transparent;
+    }
+  }
+
+  &.cd-editor-tip-below {
+    top: calc(100% + 7px);
+    animation-name: bounce-up;
+
+    &:after {
+      bottom: 100%;
+      left: 50%;
+      margin-left: -7.5px;
+      border-width: 0 7.5px 10px 7.5px;
+      border-color: transparent transparent $primary-color transparent;
+    }
+  }
+
+  &.cd-editor-tip-right {
+    left: calc(100% + 7px);
+    animation-name: bounce-left;
+
+    &:after {
+      right: 100%;
+      top: 50%;
+      margin-top: -7.5px;
+      border-width: 7.5px 10px 7.5px 0;
+      border-color: transparent $primary-color transparent transparent;
+    }
+  }
+
+  &.cd-editor-tip-left {
+    right: calc(100% + 7px);
+    animation-name: bounce-right;
+
+    &:after {
+      left: 100%;
+      top: 50%;
+      margin-top: -7.5px;
+      border-width: 7.5px 0 7.5px 10px;
+      border-color: transparent transparent transparent $primary-color;
+    }
+  }
+}
