--- a/assets/src/scss/global/_animations.scss
+++ b/assets/src/scss/global/_animations.scss
@@ -53,3 +53,15 @@
     transform: translateX(0);
   }
 }
+
+@keyframes highlight-primary {
+  0% {
+    background-color: $primary-color;
+  }
+  50% {
+    background-color: lighten($primary-color, 10%);
+  }
+  100% {
+    background-color: $primary-color;
+  }
+}
