--- a/assets/src/scss/global/_animations.scss
+++ b/assets/src/scss/global/_animations.scss
@@ -65,3 +65,15 @@
     background-color: $primary-color;
   }
 }
+
+@keyframes highlight-opacity {
+  0% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.6;
+  }
+}
