Remove need for bower install

--- a/assets/src/scss/customize/clientdash-customize.scss
+++ b/assets/src/scss/customize/clientdash-customize.scss
@@ -1,6 +1,7 @@
 @import "settings";
 
 // Vendor
+@import "../../../vendor/fontawesome/scss/font-awesome";
 @import "../../../vendor/motion-ui/motion-ui";
 
 // Global
