--- a/assets/src/scss/customize/_settings.scss
+++ b/assets/src/scss/customize/_settings.scss
@@ -5,6 +5,7 @@ $medium-gray: #c1c1c1;
 $dark-gray: #a5a5a5;
 $color-error: #E64949;
 $color-success: #709B3E;
+$color-warning: #ffc01a;
 
 $font-small: 0.8em;
 $font-medium: 1.2em;
