--- a/assets/src/scss/customize/_common.scss
+++ b/assets/src/scss/customize/_common.scss
@@ -1,9 +1,8 @@
 .cd-editor-action-button {
   color: $dark-gray;
   background: $light-gray;
-  font-weight: bold;
   border: 1px solid $medium-gray;
-  font-size: $font-large;
+  font-size: $font-medium;
   outline: none;
   height: 50px;
   line-height: 50px;
@@ -13,7 +12,7 @@
 
   &:hover {
     color: #222;
-    background: linear-gradient(to bottom, #f4f4f4 0%,#dbdbdb 100%);
+    background: linear-gradient(to bottom, #f4f4f4 0%, #dbdbdb 100%);
   }
 
   &.right {
@@ -28,14 +27,6 @@
     background: darken($light-gray, 8%) !important;
     color: lighten($dark-gray, 8%) !important;
     cursor: not-allowed;
-  }
-
-  .cd-editor-action-button-icon {
-    font-size: 1.2em;
-    height: auto;
-    width: auto;
-    vertical-align: middle;
-    margin-right: 0.2em;
   }
 
   &.cd-editor-action-button-delete {
@@ -58,6 +49,18 @@
       background: linear-gradient(to bottom, $primary-color 0%, darken($primary-color, 10%) 100%);
       color: #fff;
     }
+  }
+
+  .cd-editor-action-button-icon {
+    height: auto;
+    width: auto;
+    vertical-align: middle;
+    margin-right: 0.5em;
+    display: none;
+  }
+
+  .cd-editor-action-button-text {
+    vertical-align: middle;
   }
 }
 
@@ -92,7 +95,7 @@
   background: $primary-color;
   color: #fff;
   padding: 0.5em;
-  box-shadow: 2px 2px 10px rgba(#000,0.4);
+  box-shadow: 2px 2px 10px rgba(#000, 0.4);
   animation-duration: 1s;
   animation-iteration-count: infinite;
 
