--- a/assets/src/scss/customize/_tutorial.scss
+++ b/assets/src/scss/customize/_tutorial.scss
@@ -6,7 +6,7 @@
   height: 100%;
   width: 100%;
   cursor: not-allowed;
-  padding-left: 300px;
+  padding-left: $customizer-width;
   z-index: 20;
 
   animation-duration: 1s;
