--- a/assets/src/scss/customize/_base.scss
+++ b/assets/src/scss/customize/_base.scss
@@ -26,7 +26,7 @@ select, input {
     left: 0;
     right: 0;
     bottom: 0;
-    margin-left: 300px;
+    margin-left: $customizer-width;
     transition: margin-left 300ms;
 
     &.hidden {
