--- a/assets/src/scss/customize/_preview.scss
+++ b/assets/src/scss/customize/_preview.scss
@@ -32,12 +32,12 @@
   cursor: wait;
   z-index: 20;
 
-  .cd-editor-preview-cover-icon {
+  .cd-loading-icon {
     position: absolute;
     top: 50%;
     left: 50%;
     font-size: 4em;
-    color: $medium-gray;
+    fill: $medium-gray;
     transform: translateY(-50%) translateX(-50%);
   }
 }
