Add "missing" info on customizer menu items

--- a/assets/src/scss/customize/_editor.scss
+++ b/assets/src/scss/customize/_editor.scss
@@ -383,6 +383,12 @@ body > .cd-editor-lineitem-li {
       line-height: normal;
     }
   }
+
+  &.missing {
+    border-color: darken($color-error, 10%);
+    background: $color-error;
+    color: #fff;
+  }
 }
 
 .cd-editor-menuitem-separator {
